2A/05_Projet_GL/src/test/deca/context/invalid/sans_objet/59_while_avce_str.deca
// Description :
//     test sur while avec string  
// Resultats :
//    Erreur Contexteulle ligne 10 : le type attendu est boolean
//
// Historique :
// cree le 01/01/2024

{
    while("bonjour")
    {
        
    }
}